fixed spacing in cards

--- a/app/assets/stylesheets/components/_service_show_card.scss
+++ b/app/assets/stylesheets/components/_service_show_card.scss
@@ -70,6 +70,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-top: 1.5rem;
   }
 }
 
